Avoiding horizontal scroll

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -30,7 +30,8 @@ body {
     font-weight: 300;
     font-size: 15px;
     overflow: scroll;
-    overflow-x: hidden;
+	overflow-x: hidden;
+	 width: 100%;
 }
 
 a {
